Fix: top border not visible on small devices.

--- a/css-1.7.0/justlight.css
+++ b/css-1.7.0/justlight.css
@@ -24,7 +24,7 @@ blockquote {
 }
 
 /* bootstrap navbar */
-.navbar-fixed-top {
+.navbar-default {
 	border-top: 5px solid #377BB5;
 }
 
